--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -9,7 +9,8 @@ package:
 source:
   # repo contains symlinks which is hard to handle if we use tarball or zip.
   - git: https://github.com/MediaArea/MediaInfo
-    tag: "v${{ version }}"
+    # v25.04
+    rev: '8fb5f2180acf4d417bb4ad1eabeec63f5950b0b7'
   - path: ./build/
 
 build:
