--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -8,12 +8,12 @@ package:
 
 source:
   # repo contains symlinks which is hard to handle if we use tarball or zip.
-  - git: https://github.com/MediaArea/MediaInfo
-    tag: "v${{ version }}"
+  - git: https://github.com/trim21/MediaInfo
+    branch: wip
     # filter:
-    # exclude:
-    # - Project/OBS/**
-    # - Project/debian/**
+      # exclude:
+        # - Project/OBS/**
+        # - Project/debian/**
   - path: ./build/
 
 build:
