--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -5,7 +5,7 @@ github:
 conda_build:
   error_overlinking: true
 conda_forge_output_validation: true
-conda_install_tool: pixi
+conda_install_tool: micromamba
 build_platform:
   linux_aarch64: linux_64
   linux_ppc64le: linux_64
